// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordField render() renders 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      data-test-id="input-field"
      disabled={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      required={false}
      style={
        Object {
          "height": "auto",
        }
      }
      type="password"
      value=""
    />
  </div>
</div>
`;

exports[`PasswordField render() renders with form context 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      data-test-id="input-field"
      disabled={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      required={false}
      style={
        Object {
          "height": "auto",
        }
      }
      type="password"
      value="foobar"
    />
  </div>
</div>
`;

exports[`PasswordField render() renders with value 1`] = `
<div
  className="control-group"
>
  <div
    className="controls"
  >
    <input
      className="form-control"
      data-test-id="input-field"
      disabled={false}
      id="id-fieldName"
      name="fieldName"
      onChange={[Function]}
      required={false}
      style={
        Object {
          "height": "auto",
        }
      }
      type="password"
      value="foobar"
    />
  </div>
</div>
`;
